--- a/contact.html
+++ b/contact.html
@@ -59,7 +59,7 @@
       <div class="col-xs-12">
         <div class="section-container-spacer text-center">
           <h1 class="h2">04 : Contact me</h1>
-          <h3 class="h2">In progress</h3>
+          </br><h3 class="h2">In progress</h3>
         </div>
           
         <div class="row">
