--- a/about.html
+++ b/about.html
@@ -79,6 +79,8 @@
                   </ul>
                   <h3>Education</h3>
                   <ul class = "education">
+                    <li>Cursera - Crash Course on Python by Google
+                    (<a href="https://coursera.org/share/d9fba9587d2d88e6682a66576c8c37e8" title="">Certificate</a>)</li>
                     <li>Udemy — Complete Python Developer in 2021: Zero to Mastery 
                       (<a href="https://ude.my/UC-9e08c39a-d035-4b9d-813a-6e0d25b62022" title="">Certificate</a>)</li>
                     <li>QALight — Automation testing C#, 2020</li>
