updated course info

--- a/about.html
+++ b/about.html
@@ -104,8 +104,7 @@
                     <source class="my-photo" media="(min-width: 600px)" srcset="./static/assets/images/myphoto-sm_1x.webp 1x, ./static/assets/images/myphoto-sm_2x.webp 2x" type="image/webp"> 
                     <source class="my-photo" class="my-photo" media="(min-width: 900px)" srcset="./static/assets/images/myphoto-md_1x.webp 1x, ./static/assets/images/myphoto-md_2x.webp 2x" type="image/webp">
                     <source class="my-photo" media="(min-width: 1440px)" srcset="./static/assets/images/myphoto-lg_1x.webp 1x, ./static/assets/images/myphoto-lg_2x.webp 2x" type="image/webp">
-                    <img class="my-photo" srcset="./static/assets/images/myphoto-sm_1x.png 600w, ./static/assets/images/myphoto-md_1x.png 900w, ./static/assets/images/myphoto-lg_1x.png 1440w" src="./static/assets/images/myphoto-lg_1x.png"
-                         srcset="./static/assets/images/myphoto-sm_2x.png 600w, ./static/assets/images/myphoto-md_2x.png 900w, ./static/assets/images/myphoto-lg_2x.png 1440w" type="image/png" alt="my photo">
+                    <img class="my-photo" srcset="./static/assets/images/myphoto-sm_1x.png 600w, ./static/assets/images/myphoto-md_1x.png 900w, ./static/assets/images/myphoto-lg_1x.png 1440w" src="./static/assets/images/myphoto-lg_1x.png" srcset="./static/assets/images/myphoto-sm_2x.png 600w, ./static/assets/images/myphoto-md_2x.png 900w, ./static/assets/images/myphoto-lg_2x.png 1440w" type="image/png" alt="my photo">
                   </picture>
 
                 </div>
