added one more hobby

--- a/about.html
+++ b/about.html
@@ -96,6 +96,7 @@
                     <li>Snowboarding</li>
                     <li>Hiking</li>
                     <li>Lego constructors</li>
+                    <li>Table soccer</li>
                     <li>Dreaming</li>
                   </ul>
                 </div>
